clusters/k3s/apps/pydio/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pydio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pydio
  template:
    metadata:
      labels:
        app: pydio
    spec:
      containers:
      - name: pydio
        image: pydio/cells:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /var/cells
          name: pydio-storage
      volumes:
      - name: pydio-storage
        persistentVolumeClaim:
          claimName: pydio-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mariadb:latest
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: pydio-mysql-storage
      volumes:
      - name: pydio-mysql-storage
        persistentVolumeClaim:
          claimName: pydio-mysql-pvc
