clusters/k3s/apps/pydio/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pydio-service
spec:
  selector:
    app: pydio
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
