clusters/k3s/apps/pydio/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pydio
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: pydio-pydio-notls@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: pydio.devcw.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pydio-service
            port:
              number: 8080
  tls:
  - hosts:
    - pydio.devcw.xyz
